Player balance is now saved in database. Prettied up main dashboard page.

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,5 +1,6 @@
 {
     "/js/app.js": "/js/app.js",
     "/css/app.css": "/css/app.css",
+    "/images/dashboard-logo.png": "/images/dashboard-logo.png",
     "/images/welcome-logo.png": "/images/welcome-logo.png"
 }
